--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    time for fun
+		    hope you have a great day!
 	    </footer>
 	</body>
 </html>
