adjusted rocket to be fighter pod

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>my project? idk</h1>
+			<h1>hey there</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalDesign" data-processing-sources="OriginalDesign.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    hope you have a great day!
+		    May the force be with you.
 	    </footer>
 	</body>
 </html>
